fixed the xIcon from staying visible after failed search.

--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -15,13 +15,14 @@
   svg {
     @include border-radius(4px);
     // border: 2px solid $action-color;
-    border: 2px solid transparent;
   }
   #ico {
     padding: .5rem;
+    border: 2px solid $action-color;
   }
   #x {
     padding: .2rem;
+    border: 2px solid transparent;
   }
   &:hover svg {
     border-color: $white;
